Changelog
=========

3.0b3 - Unreleased
------------------

- Rearranged the package documentation to the top-level of the distribution.
  [hannosch]

- Added a buildout configuration to the package for stand-alone testing.
  [hannosch]

- Fixed bad spelling in status message in translate view.
  [hannosch]

- Make sure to use the native language name in the language selector in the
  same way Plone itself does this.
  [hannosch]

- Specify an alt text on the language selector images. This closes
  http://plone.org/products/linguaplone/issues/188.
  [hannosch]

- Fixed invalid code instructions in the README. This closes
  http://plone.org/products/linguaplone/issues/207.
  [hannosch]

- Removed the long broken portlet_languages. This was a pre-Plone 3 old-style
  portlet. See http://plone.org/products/linguaplone/issues/209.
  [hannosch]

3.0b2 - 2009-09-25
------------------

- Don't forget the rest of the formvariables, when dealing with request.form.
  [tesdal]

3.0b1 - 2009-09-25
------------------

- Don't mangle request.form when allowing Unicode.
  [tesdal]

- Get default language from content parent inside portal factory.
  [tesdal]

- Added dynamic id attribute to <tr> in translate_item.cpt for easier styling.
  [jensens, hpeteragitator]

3.0a3 - 2009-09-09
------------------

- Allow Unicode in request.form.
  [tesdal]

3.0a2 - 2009-09-07
------------------

- Preserve view, template and query components when switching language
  [tesdal]

- Ensure that the LinguaPlone browser layer is more specific than the default
  in the interface __iro__ so that registrations to the LinguaPlone layer win.
  [rossp]

- Added undeclared dependency on Products.PloneLanguageTool >= 3.0.
  [hannosch]

3.0a1 - 2009-06-03
------------------

- Removed `checkVersion` check from our init method and declare a dependency
  on Plone instead.
  [hannosch]

- Changed the profile version to a simple `3`, to follow best practices of